--- a/app/package.json
+++ b/app/package.json
@@ -64,6 +64,7 @@
     "react-3d-viewer": "^1.0.12",
     "react-dom": "17.0.2",
     "react-dropzone": "^12.1.0",
+    "react-ga4": "^2.1.0",
     "react-helmet": "^6.1.0",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.0.1",
