--- a/app/package.json
+++ b/app/package.json
@@ -65,10 +65,12 @@
     "react-dom": "17.0.2",
     "react-dropzone": "^12.1.0",
     "react-helmet": "^6.1.0",
+    "react-markdown": "^8.0.0",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.0.1",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
+    "react-spring": "^9.7.3",
     "react-use": "^17.3.2",
     "react-usestateref": "^1.0.8",
     "readline": "^1.3.0",
