update image feed
- Added usehooks-ts package to package.json and package-lock.json
- Updated CodeExamples.js to include more detailed code examples
- Updated GenerativeImageFeed.js to include more detailed image data and server load information
- Updated Layouts.js to center align the GenerativeImageFeed
- Updated Home/index.js to move MusicVideo component below GenerativeImageFeed
- Updated useFeedLoader.js to skip NSFW content
- Updated useImageSlideshow.js to use useInterval from usehooks-ts for image slideshow
- Updated commit message format

--- a/app/package.json
+++ b/app/package.json
@@ -75,6 +75,7 @@
     "throttle-debounce": "^3.0.1",
     "tree-kill": "^1.2.2",
     "use-debounce": "^10.0.0",
+    "usehooks-ts": "^3.0.1",
     "webhook-discord": "^3.7.8"
   },
   "scripts": {
