--- a/app/package.json
+++ b/app/package.json
@@ -4,10 +4,6 @@
   "version": "0.4.8",
   "private": false,
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.2",
     "@mui/material": "^6.1.0",
     "@pollinations/react": "^1.3.4",
     "debug": "^4.3.2",
@@ -57,5 +53,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.11"
   }
 }
