--- a/projects/haustierhoroskop/package.json
+++ b/projects/haustierhoroskop/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@pollinations/react": "^1.5.5",
+    "@pollinations/react": "^1.5.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-separator": "^1.1.0",
@@ -20,6 +20,7 @@
     "lucide-react": "^0.441.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
     "shadcn-ui": "^0.9.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
